// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultipleFileUploadTitleTextSeparator renders custom class names 1`] = `
<MultipleFileUploadTitleTextSeparator
  className="test"
>
  <div
    className="pf-c-multiple-file-upload__title-text-separator test"
  >
    Foo
  </div>
</MultipleFileUploadTitleTextSeparator>
`;

exports[`MultipleFileUploadTitleTextSeparator renders with expected class names 1`] = `
<MultipleFileUploadTitleTextSeparator>
  <div
    className="pf-c-multiple-file-upload__title-text-separator"
  >
    Foo
  </div>
</MultipleFileUploadTitleTextSeparator>
`;
